--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,8 +43,7 @@
             android:textColor="#9C27B0"
             android:ellipsize="marquee"
             android:layout_weight="1"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:text="心愿"/>
+            android:marqueeRepeatLimit="marquee_forever"/>
 
         <TextView
             android:id="@+id/author"
@@ -52,8 +51,7 @@
             android:gravity="center_vertical"
             android:layout_weight="1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="四个女生"/>
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
 </LinearLayout>
